# gym-2048

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
gym_game2048/: __init__.py
gym_game2048/envs/: __init__.py  game2048.py
gym_game2048/wrappers/: __init__.py  log_observation.py  normalize_2048.py  normalize_observation.py  obs_like_game.py  preprocess_for_tensor.py  reward_by_score.py  reward_converter.py  terminate_illegal.py
