[tool.poetry]
name = "gym-game2048"
version = "0.1.0"
description = "A reinforcement learning environment for the 2048 game based on Gymnasium."
authors = ["helpingstar <iamhelpingstar@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.21.0"
gymnasium = ">=1.0.0a1"
moviepy = ">=1.0.0"
pygame = ">=2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
